# voice-ai

./: .pre-commit-config.yaml  README.md
.github/workflows/: analyze-be-livekit-py.yml  analyze-fe-livekit-react.yml  lint-be-livekit-py.yml
be-livekit-py/: .env.example  .gitignore  pyproject.toml  ruff.toml
be-livekit-py/src/: main.py  simple_agent.py
be-livekit-py/src/agents/: db_control.py  multi_agent.py  simple_agent.py  simple_hasegawa.py
fe-livekit-react/: .prettierrc  eslint.config.mjs  index.html  package-lock.json  package.json
fe-livekit-react/src/: App.tsx
fe-livekit-react/src/lib/livekit/: index.ts  room-context.tsx
fe-livekit-react/src/lib/livekit/hooks/: connect-room.ts  index.ts
